--- a/src/App.css
+++ b/src/App.css
@@ -96,52 +96,6 @@
 }
 
 
-.previewPage{
-  height: 100vh;
-  display: grid;
-  
-  grid-template-columns: auto auto;
-}
-
-.previewPage .firstCol, .previewPage .secondCol{
-  margin: 30px;
-  height: 700px;
-  width: 55rem;
-}
-
-.previewPage .firstCol{
- 
-  background-image: url("https://images.unsplash.com/photo-1561214078-f3247647fc5e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
-  background-size: contain;
-  background-attachment: fixed;
-  
-}
-
-.previewPage .secondCol{
-  background-color: rgb(0, 0, 0);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-
-
-}
-
-.previewPage .secondCol p{
-  width: 400px;
-  color: white;
-  font-size: 30px;
-}
-.previewPage .secondCol h1{
-  color: white;
-  margin-bottom: 30px;
-  font-size: 60px;
-}
-
-.previewPage .secondCol span{
-  color: red;
-}
-
 
 .classes{
   width: 100%;
@@ -290,5 +244,132 @@
   left: 20rem;
 }
 
+
+/* Main page */
+
+
+.mainPage{
+  background-attachment: fixed;
+  
+  width: 100%;
+  height: 100vh;
+  background-image: url('https://images.unsplash.com/photo-1526506118085-60ce8714f8c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
+  background-size: 700px 1000px;
+  background-repeat: no-repeat;
+
 }
 
+.mainPage h1{
+  position: relative;
+  left: 100px;
+  z-index: 999;
+  font-size: 60px;
+  color: white;
+  width: 700px;
+}
+
+.mainPage button{
+  z-index: 999;
+  position: relative;
+  right: 3rem;
+  top: 20rem;
+  
+  height: 60px;
+  background-color: purple;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  border: none;
+  transition: .3s;
+}
+
+
+
+/*Preview Page*/
+
+.previewPage{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.previewPage .firstCol{
+  height: 50vh;
+  width: 100%;
+  background-color: black;
+  color: white;
+  
+}
+.img{
+  width: 400px;
+  background-attachment: fixed;
+}
+
+.secondCol{
+  padding: 50px;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+
+
+
+}
+
+
+
+
+@media only screen and (min-width: 1200px){
+
+  
+.previewPage{
+  height: 100vh;
+  display: grid;
+  
+  grid-template-columns: auto auto;
+}
+
+.previewPage .firstCol, .previewPage .secondCol{
+  margin: 30px;
+  height: 700px;
+  width: 55rem;
+}
+
+.previewPage .firstCol{
+ 
+  background-image: url("https://images.unsplash.com/photo-1561214078-f3247647fc5e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  background-size: contain;
+  background-attachment: fixed;
+  
+}
+
+.previewPage .secondCol{
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+
+}
+
+.previewPage .secondCol p{
+  width: 400px;
+  color: white;
+  font-size: 30px;
+}
+.previewPage .secondCol h1{
+  color: white;
+  margin-bottom: 30px;
+  font-size: 60px;
+}
+
+.previewPage .secondCol span{
+  color: red;
+}
+
+}
