--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,346 @@
   color: rgb(128, 128, 128);
 }
 
+
+
+
+
+
+
+.closeBtn{
+  display: none;
+  position: absolute;
+  left: 20rem;
+  
+}
+
+
+.programs .head{
+  font-size: 30px;
+}
+
+
+
+@media only screen and (max-width: 390px) {
+  
+
+
+  .firstSection{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    color: rgb(0, 0, 0);
+    font-size: 60px;
+    background-attachment: fixed;
+    background-image:  url("https://images.unsplash.com/photo-1484480974693-6ca0a78fb36b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80");
+    background-color: brown;
+    background-size: initial;
+  }
+  
+  .secondSection{
+    height: 100vh;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px;
+    
+  }
+  
+  .secondSection h3{
+    font-size: 80px;
+    margin-bottom: 100px;
+  }
+  
+  .secondSection form input {
+    width: 300px;
+    height: 70px;
+    position: relative;
+    left: 30px;
+    bottom: 5px;
+    padding: 30px;
+    font-size: 20px;
+  }
+  
+  .secondSection form button{
+  
+    
+      width: 130px;
+      height: 70px;
+      background-color: purple;
+      color: white;
+      font-size: 35px;
+      cursor: pointer;
+      border: none;
+      transition: .3s;
+      position: relative;
+    left: 30px;
+  
+  }
+  
+  .secondSection form button:hover{
+    background-color: rgb(140, 0, 196);
+    color: rgb(255, 255, 255);
+  }
+
+
+  .nav ul{
+    width: 100%;
+    transition: .3s;
+  }
+  
+.unordered{
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(32, 0, 32);
+  justify-content: start;
+  align-items: center;
+  position: relative;
+  left: 7rem;
+  width: 200px;
+  top: 250px;
+  
+}
+
+.unordered li {
+  font-size: 30px;
+  border-top: 1px solid black;
+  padding: 10px;
+  display: flex;
+  margin-right: 80px;
+  
+  
+}
+
+.closeBtn{
+  display: block;
+  position: absolute;
+  left: 20rem;
+}
+
+
+/* Main page */
+
+
+.mainPage{
+  background-attachment: fixed;
+  
+  width: 100%;
+  height: 100vh;
+  background-image: url('https://images.unsplash.com/photo-1526506118085-60ce8714f8c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
+  background-size: 700px 1000px;
+  background-repeat: no-repeat;
+
+}
+
+.mainPage h1{
+  position: relative;
+  left: 100px;
+  z-index: 999;
+  font-size: 60px;
+  color: white;
+  width: 700px;
+}
+
+.mainPage button{
+  z-index: 999;
+  position: relative;
+  right: 3rem;
+  top: 20rem;
+  
+  height: 60px;
+  background-color: purple;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  border: none;
+  transition: .3s;
+}
+
+
+
+/*Preview Page*/
+
+.previewPage{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.previewPage .firstCol{
+  height: 50vh;
+  width: 100%;
+  background-image: url('https://images.unsplash.com/photo-1571902943202-507ec2618e8f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1075&q=80');
+  background-size: cover;
+  color: white;
+  
+}
+.img{
+  width: 400px;
+  background-attachment: fixed;
+}
+
+.secondCol{
+  padding: 50px;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+
+
+
+}
+
+
+
+
+.mainPage button{
+  z-index: 999;
+  position: absolute;
+  left: 3rem;
+  top: 32rem;
+  width: 200px;
+  height: 70px;
+  background-color: purple;
+  color: white;
+  font-size: 40px;
+  cursor: pointer;
+  border: none;
+  transition: .3s;
+}
+
+.mainPage button:hover{
+  background-color: white;
+  color: black;
+}
+
+
+.mainPage h1{
+  position: relative;
+  top: 100px;
+  left: 100px;
+  z-index: 999;
+  font-size: 3s0px;
+  color: white;
+  width: 300px;
+}
+
+
+
+
+
+.classes{
+  width: 100%;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  
+}
+
+.classes .class{
+  display: flex;
+  justify-content: center;
+  padding-left: 100px;
+  
+
+  border-top: solid black;
+  margin-top: 30px;
+  
+}
+
+.classes .class h3{
+ width: 10rem ;
+ font-size: 20px;
+ 
+}
+
+.classes .class button{
+  position: relative;
+  right: 50px;
+  width: 100px;
+  height: 30px;
+  background-color: purple;
+  color: white;
+  font-size: 15px;
+  cursor: pointer;
+  border: none;
+  transition: .3s;
+}
+
+
+
+
+.classes .class button:hover{
+  background-color: white;
+  color: black;
+}
+
+.border{
+  border-bottom: solid black;
+  width: 98%;
+}
+
+
+
+@media only screen and (min-width: 1200px){
+
+  
+.previewPage{
+  height: 100vh;
+  display: grid;
+  
+  grid-template-columns: auto auto;
+}
+
+.previewPage .firstCol, .previewPage .secondCol{
+  margin: 30px;
+  height: 700px;
+  width: 55rem;
+}
+
+.previewPage .firstCol{
+ 
+  background-image: url("https://images.unsplash.com/photo-1561214078-f3247647fc5e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  background-size: contain;
+  background-attachment: fixed;
+  
+}
+
+.previewPage .secondCol{
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+
+}
+
+.previewPage .secondCol p{
+  width: 400px;
+  color: white;
+  font-size: 30px;
+}
+.previewPage .secondCol h1{
+  color: white;
+  margin-bottom: 30px;
+  font-size: 60px;
+}
+
+.previewPage .secondCol span{
+  color: red;
+}
+
+
+
+
 .mainPage{
   background-attachment: fixed;
   display: flex;
@@ -148,12 +488,15 @@
   width: 98%;
 }
 
+
+
+
 .firstSection{
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  color: rgb(0, 0, 0);
+  color: rgb(173, 0, 0);
   font-size: 60px;
   background-attachment: fixed;
   background-image:  url("https://images.unsplash.com/photo-1484480974693-6ca0a78fb36b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80");
@@ -203,173 +546,5 @@
   color: rgb(255, 255, 255);
 }
 
-.closeBtn{
-  display: none;
-  position: absolute;
-  left: 20rem;
-}
-
-
-@media only screen and (max-width: 390px) {
-  
-
-  .nav ul{
-    width: 100%;
-  }
-  
-.unordered{
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(32, 0, 32);
-  justify-content: start;
-  align-items: center;
-  position: relative;
-  left: 7rem;
-  width: 200px;
-  top: 250px;
-}
-
-.unordered li {
-  font-size: 30px;
-  border-top: 1px solid black;
-  padding: 10px;
-  display: flex;
-  margin-right: 80px;
-  
-}
-
-.closeBtn{
-  display: block;
-  position: absolute;
-  left: 20rem;
-}
-
-
-/* Main page */
-
-
-.mainPage{
-  background-attachment: fixed;
-  
-  width: 100%;
-  height: 100vh;
-  background-image: url('https://images.unsplash.com/photo-1526506118085-60ce8714f8c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
-  background-size: 700px 1000px;
-  background-repeat: no-repeat;
-
-}
-
-.mainPage h1{
-  position: relative;
-  left: 100px;
-  z-index: 999;
-  font-size: 60px;
-  color: white;
-  width: 700px;
-}
-
-.mainPage button{
-  z-index: 999;
-  position: relative;
-  right: 3rem;
-  top: 20rem;
-  
-  height: 60px;
-  background-color: purple;
-  color: white;
-  font-size: 20px;
-  cursor: pointer;
-  border: none;
-  transition: .3s;
-}
-
-
-
-/*Preview Page*/
-
-.previewPage{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.previewPage .firstCol{
-  height: 50vh;
-  width: 100%;
-  background-color: black;
-  color: white;
-  
-}
-.img{
-  width: 400px;
-  background-attachment: fixed;
-}
-
-.secondCol{
-  padding: 50px;
-  background-color: black;
-  color: white;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-
-
-
-}
-
-
-
-
-@media only screen and (min-width: 1200px){
-
-  
-.previewPage{
-  height: 100vh;
-  display: grid;
-  
-  grid-template-columns: auto auto;
-}
-
-.previewPage .firstCol, .previewPage .secondCol{
-  margin: 30px;
-  height: 700px;
-  width: 55rem;
-}
-
-.previewPage .firstCol{
- 
-  background-image: url("https://images.unsplash.com/photo-1561214078-f3247647fc5e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
-  background-size: contain;
-  background-attachment: fixed;
-  
-}
-
-.previewPage .secondCol{
-  background-color: rgb(0, 0, 0);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-
-
-}
-
-.previewPage .secondCol p{
-  width: 400px;
-  color: white;
-  font-size: 30px;
-}
-.previewPage .secondCol h1{
-  color: white;
-  margin-bottom: 30px;
-  font-size: 60px;
-}
-
-.previewPage .secondCol span{
-  color: red;
-}
 
 }
