--- a/src/App.css
+++ b/src/App.css
@@ -547,4 +547,65 @@
 }
 
 
+
+.navBar h3{
+  position: relative;
+  left: 90rem;
+  cursor: pointer;
+}
+
+.navBar{
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  height: 100px;
+  padding-bottom: 30px;
+  background-color: rgb(32, 0, 32);
+  color: white;
+  display: flex;
+  justify-content: left;
+  align-items: flex-end;
+  width: 100%;
+}
+
+.navBar ul{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+
+}
+
+.navBar ul li{
+  margin-left: 50px;
+  width: 100px;
+  text-decoration: none;
+  list-style: none;
+  cursor: pointer;
+  transition: .3s;
+  text-decoration: none;
+  color: white;
+  
+}
+
+.navBar ul li:hover{
+  color: rgb(128, 128, 128);
+}
+
+
+.individualPlan{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px;
+  width: 1300px;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  font-size: 30px;
+  border-radius: 14px;
+}
+
+
+
 }
