--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,27 @@
 }
 
 
+.individualPlan{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px;
+  width: 500px;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  font-size: 20px;
+  border-radius: 14px;
+}
+
+.individualPlan h4{
+
+  font-size: 30px;
+}
+.individualPlan h2{
+  font-size: 20px;
+}
+
 
 @media only screen and (max-width: 390px) {
   
