--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@
 
 
 .individualPlan{
+
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -126,7 +127,7 @@
     background-attachment: fixed;
     background-image:  url("./pic/1.jpeg");
     background-color: brown;
-    background-size: cover;
+    background-size: 60rem;
   }
   
   .firstSection h1{
@@ -145,7 +146,10 @@
   }
   
   .secondSection h3{
-    font-size: 80px;
+    font-size: 40px;
+    position: relative;
+    top: 70px;
+    color: red;
     margin-bottom: 100px;
   }
   
@@ -158,15 +162,22 @@
     padding: 30px;
     font-size: 20px;
   }
-  
+  input[type='radio'] {
+    transform: scale(.4);
+}
+
+.secondSection input {
+  display: flex;
+}
   .secondSection form button{
   
     
-      width: 130px;
-      height: 70px;
+      width: 100px;
+      height: 40px;
       background-color: purple;
       color: white;
-      font-size: 35px;
+      font-size: 25px;
+      border-radius: 7px;
       cursor: pointer;
       border: none;
       transition: .3s;
